# react-native-css-nitro

./: AGENTS.md  CONTRIBUTING.md  CssNitro.podspec  README.md  babel.config.js  eslint.config.mjs  jest.config.cjs  lefthook.yml  nitro.json  package.json  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/cssnitro/: CssNitro.kt  CssNitroPackage.kt
cpp/: Animations.cpp  Animations.hpp  AnyToDynamic.cpp  AnyToDynamic.hpp  Computed.hpp  ContainerContext.cpp  ContainerContext.hpp  Effect.hpp  Environment.cpp  Environment.hpp  Helpers.hpp  HybridMath.hpp  HybridStyleRegistry.cpp  HybridStyleRegistry.hpp  HybridStyleRule+Equality.hpp  JSLogger.hpp  Observable.hpp  PseudoClasses.cpp  PseudoClasses.hpp  Rules.cpp  Rules.hpp  ShadowTreeUpdateManager.cpp  ShadowTreeUpdateManager.hpp  Specificity.hpp  StyleFunction.cpp  StyleFunction.hpp  StyleResolver.cpp  StyleResolver.hpp  StyleRule+Equality.hpp  Styled+Equality.hpp  StyledComputedFactory.cpp  StyledComputedFactory.hpp  StyledResolver.cpp  StyledResolver.hpp  VariableContext.cpp  VariableContext.hpp  computed.h  computed.hpp  effect.hpp  observable.h  (+3 more)
cpp/tests/: CMakeLists.txt  computed_tests.cpp  shadow_tree_manager_tests.cpp
example/: app.json  babel.config.js  metro.config.js  package.json  react-native-css-nitro-env.d.ts  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/CssNitroExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/CssNitroExample.xcodeproj/: project.pbxproj
example/ios/CssNitroExample.xcodeproj/xcshareddata/xcschemes/: CssNitroExample.xcscheme
example/src/: App.tsx
ios/: CssNitro.swift
src/: CssNitro.nitro.ts  index.tsx  utils.ts
src/__tests__/compiler/: tailwind.test.ts
src/compiler/: atRules.ts  compiler.ts  compiler.types.ts  container-query.ts  declarations.ts  index.ts  inline-variables.ts  keyframes.ts  media-query.ts  parsers.ts  selectors.ts  stylesheet-new.ts  stylesheet.ts  supports.ts  types.ts
src/compiler/__tests__/: smoke.test.ts  tailwind.test.ts
src/components/: View.native.tsx
src/components/Text/: Text.native.tsx  Text.tsx  index.ts
src/components/View/: View.native.tsx  View.tsx  index.ts
src/metro/: index.ts  injection-code.ts  metro-transformer.ts  resolver.ts
src/native/: attributeQuery.ts  contexts.ts  mergeRefs.ts  specificity.ts  useClassNameMeta.ts  useClassnameData.ts  useElement.ts  useHandlers.ts  useRef.ts  useStyled.ts  utils.ts
src/native-cpp/: contexts.ts
src/native-ts/: Animations.ts  Computed.ts  ContainerContext.ts  Environment.ts  HybridStyleRegistry.ts  Observable.ts  PseudoClasses.ts  Rules.ts  Specificity.ts  StyleEngineFactory.ts  StyleFunction.ts  StyleResolver.ts  StyledComputedFactory.ts  VariableContext.ts  dependencies.ts  index.ts  types.ts
src/native/__tests__/: box-shadow.test.tsx  calc.test.tsx  colors.test.tsx  imperative-api.test.tsx
src/native/cpp-lib/: useStyled.ts
src/native/js-lib/: Animations.ts  Effect.ts  Observable.ts  PseudoClasses.ts  Rules.ts  Specificity.ts  StyleEngineFactory.ts  StyleFunction.ts  StyleRegistry.ts  StyleResolver.ts  StyledComputedFactory.ts  VariableContext.ts  dependencies.ts  jest.ts  useStyled.ts
src/native/js-lib/functions/: calc.ts
src/native/js-lib/shorthand/: box-shadow.ts  handler.ts
src/specs/: Math.nitro.ts  StyleRegistry.nitro.ts  StyleRegistry.ts
src/specs/StyleRegistry/: HybridStyleRegistry.nitro.ts  StyleRegistry.nitro.ts  index.ts  types.ts
src/web/: useStyled.ts
(+2 files in other folders)
